<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">蓝牙BLE助手</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ch3">CH3:</string>
    <string name="ch2">CH2:</string>
    <string name="ch1">CH1:</string>
    <string name="day_light">白天亮度:</string>
    <string name="night_light">夜晚亮度:</string>
    <string name="mode_select">模式选择:</string>
    <string name="brightness_title">BRIGHTNESS</string>
    <string name="duty_title">DUTY</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>

    <string-array name="light_mode">
        <item>白天</item>
        <item>夜晚</item>
        <item>全天</item>
    </string-array>

</resources>
