<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/duty_title"
        android:textSize="17sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:paddingHorizontal="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:text="@string/ch1" />

        <com.sevenheaven.segmentcontrol.SegmentControl
            android:id="@+id/segment_control_ch1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:textSize="10sp"
            app:block_direction="horizon"
            app:selectedColor="#32ADFF"
            app:normalColor="#FFFFFF"
            app:cornerRadius="5dp"
            app:separatorWidth="2dp"
            app:boundWidth="2dp"
            app:texts="0.5 : 0.5|0.25 : 0.75|1 : 0.5|1 : 1|Always"
            app:verticalGap="10dp"
            app:horizonGap="10dp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:text="@string/ch2" />

        <com.sevenheaven.segmentcontrol.SegmentControl
            android:id="@+id/segment_control_ch2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:textSize="10sp"
            app:block_direction="horizon"
            app:selectedColor="#32ADFF"
            app:normalColor="#FFFFFF"
            app:cornerRadius="5dp"
            app:separatorWidth="2dp"
            app:boundWidth="2dp"
            app:texts="0.5 : 0.5|0.25 : 0.75|1 : 0.5|1 : 1|Always"
            app:verticalGap="10dp"
            app:horizonGap="10dp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:text="@string/ch3" />

        <com.sevenheaven.segmentcontrol.SegmentControl
            android:id="@+id/segment_control_ch3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:textSize="10sp"
            app:block_direction="horizon"
            app:selectedColor="#32ADFF"
            app:normalColor="#FFFFFF"
            app:cornerRadius="5dp"
            app:separatorWidth="2dp"
            app:boundWidth="2dp"
            app:texts="0.5 : 0.5|0.25 : 0.75|1 : 0.5|1 : 1|Always"
            app:verticalGap="10dp"
            app:horizonGap="10dp"
            tools:ignore="SmallSp" />
    </LinearLayout>

</LinearLayout>